internal/kgateway/translator/gateway/testutils/inputs/gateway-only/tls-alpn.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: example-gateway
spec:
  gatewayClassName: kgateway
  listeners:
  - name: https
    protocol: HTTPS
    port: 443
    tls:
      mode: Terminate
      options:
        kgateway.dev/alpn-protocols: "h2"
        kgateway.dev/cipher-suites: "TLS_ECDHE_RSA_WITH_AES_128_GCM_SHA256,TLS_ECDHE_RSA_WITH_AES_256_GCM_SHA384"
        kgateway.dev/ecdh-curves: "X25519MLKEM768,X25519,P-256"
        kgateway.dev/min-tls-version: "1.2"
        kgateway.dev/max-tls-version: "1.3"
        # TODO: add verify subject alt names
      certificateRefs:
        - name: https
          kind: Secret
  - name: https-with-hostname
    hostname: second-example.org
    protocol: HTTPS
    port: 8443
    tls:
      options:
        kgateway.dev/alpn-protocols: "allow-empty"
      mode: Terminate
      certificateRefs:
        - name: https
          kind: Secret
